force-app/main/default/objects/Sample__c/fields/Manufacturing_Plant__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturing Plant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.ProductName__c</field>
            <operation>equals</operation>
            <valueField>Manufacturing_Plant__c.Imerys_Product__c</valueField>
        </filterItems>
        <filterItems>
            <field>Manufacturing_Plant__c.Imerys_Site__r.ImerysManufacturingPlant__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Manufacturing_Plant__c</referenceTo>
    <relationshipLabel>Samples</relationshipLabel>
    <relationshipName>Samples</relationshipName>
    <type>Lookup</type>
</CustomField>