force-app/main/default/objects/Sample__c/fields/ManufacturingImerysPlant__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingImerysPlant__c</fullName>
    <formula>ProductName__r.ImerysManufacturingPlant__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imerys Manufacturing Plant</label>
    <type>Text</type>
</CustomField>