force-app/main/default/objects/Sample__c/fields/Market_VP__c.field-meta.xml
<CustomField>
    <fullName>Market_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Samples4</relationshipName>
    <type>Lookup</type>
</CustomField>