force-app/main/default/objects/Sample__c/fields/RecipientName__c.field-meta.xml
<CustomField>
    <fullName>RecipientName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 3) OR 2</booleanFilter>
        <filterItems>
            <field>Contact.Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>$User.ByPassLookupCriteria__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.AccountName__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Samples</relationshipLabel>
    <relationshipName>Samples</relationshipName>
    <type>Lookup</type>
</CustomField>