force-app/main/default/objects/Sample__c/fields/Requirments_For_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Requirments_For_Approval_Process__c</fullName>
    <formula>IF(
RecordType.DeveloperName = &apos;SampleAfterCreation&apos; &amp;&amp;
ISPICKVAL(Status__c,&apos;Draft Creation&apos;) &amp;&amp;
ISBLANK(DispatchSiteLookup__c) ||
ISPICKVAL(CostChargedToCustomer__c,&apos;&apos;)||
ISPICKVAL(Incoterm__c,&apos;&apos;) ||
ISPICKVAL(ApprovalRequirement__c,&apos;&apos;) ||
ISBLANK(RecipientName__c)||
ISBLANK(RequiredDocumentation__c) ||
ISPICKVAL(AutomaticAcknowledgmentMailtoContact__c , &apos;&apos;)||
ISBLANK(Gatekeeper__c),&apos;Dispatch Site / Cost Charged / Documentation / Acknowledgment Mail to Contact / Incoterm / Approval Requirement / Recipient Name / Sample Administrator&apos;,&apos;Requirements have been met &amp; you may submit for approval &apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requirements For Approval Process</label>
    <type>Text</type>
</CustomField>