force-app/main/default/objects/Sample__c/fields/SameDispatchSiteAndPlant__c.field-meta.xml
<CustomField>
    <fullName>SameDispatchSiteAndPlant__c</fullName>
    <formula>IF( DispatchSiteLookup__r.Name = ManufacturingImerysPlant__c , True,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Same Dispatch Site And Plant</label>
    <type>Checkbox</type>
</CustomField>