force-app/main/default/objects/Sample__c/fields/Trade_Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Trade_Show_Name__c</fullName>
    <label>Trade Show Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Originoftherequest__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>EventName</valueSetName>
    </valueSet>
</CustomField>