force-app/main/default/objects/Sample__c/validationRules/Manufacturing_Plant_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Manufacturing_Plant_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW(),ISNULL( Manufacturing_Plant__c ))  ||  ISBLANK( Manufacturing_Plant__c )</errorConditionFormula>
    <errorDisplayField>Manufacturing_Plant__c</errorDisplayField>
    <errorMessage>Manufacturing Plant is mandatory</errorMessage>
</ValidationRule>