force-app/main/default/objects/Sample__c/validationRules/SAM_VR01_DispatchSiteMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>SAM_VR01_DispatchSiteMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

NOT(ISPICKVAL( Status__c, &apos;Draft Creation&apos;)),
ISBLANK(DispatchSiteLookup__c),
Canceled__c=FALSE,
$User.ByPassValidationRule__c = FALSE ,
OR(RecordType.DeveloperName = &apos;SAM_SampleWithOpportunity&apos; ,RecordType.DeveloperName =&apos;SAM_SampleWithoutOpportunity&apos;)
)

||

AND(

NOT(ISPICKVAL( Status__c, &apos;Draft Creation&apos;)),
ISBLANK(DispatchSiteLookup__c),
$User.ByPassValidationRule__c = FALSE ,
RecordType.DeveloperName = &apos;SampleAfterCreation&apos;,
NOT(
ISPICKVAL( CloseReason__c, &apos;Cancelled - Product not available&apos; ) ||
ISPICKVAL( CloseReason__c, &apos;Cancelled - Customer decision&apos; ) ||
ISPICKVAL( CloseReason__c, &apos;Cancelled - Other&apos; )
)
)</errorConditionFormula>
    <errorDisplayField>DispatchSiteLookup__c</errorDisplayField>
    <errorMessage>You need to select a Dispatch Site in order to continue</errorMessage>
</ValidationRule>