force-app/main/default/objects/Sample__c/validationRules/VR_MandatoryForCustomerEvaluation.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_MandatoryForCustomerEvaluation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c, &apos;Customer Evaluation&apos;),
ISBLANK(Batch_Lot_reference__c)&amp;&amp;
$User.ByPassValidationRule__c = FALSE)</errorConditionFormula>
    <errorDisplayField>Batch_Lot_reference__c</errorDisplayField>
    <errorMessage>Batch/Lot Reference Field is mandatory to Proceed for Customer Evaluation</errorMessage>
</ValidationRule>